Project structure changed

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -44,8 +44,7 @@
     <p class="lead">Сделайте фоторамку с мозаикой, мозаичное тарелку для фруктов, зеркало с инкрустацией мозаикой, необычный горшок для цветов или мозаичный столик своими руками c нуля.</p>
 
     <blockquote class="blockquote">
-        <p>"Мозаика — моё хобби, которое вдохновляет, даёт силы и новые эмоции. Приходите попробовать на
-            мастер-классы.﻿"</p>
+        <p>"Мозаика — моё хобби, которое вдохновляет, даёт силы и новые эмоции. Приходите попробовать на мастер-классы.﻿"</p>
     </blockquote>
 </div>
 
