--- a/src/layouts/workshops/list.html
+++ b/src/layouts/workshops/list.html
@@ -8,10 +8,11 @@
                 {{ range .Pages }}
                 <div class="col">
                     <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                        </svg>
+                        </svg> -->
+                        <img src="{{ .Permalink }}/images/1.jpg" class="card-img-top"/>
                         <div class="card-body">
                             <h5>{{ .Title }}</h5>
                             <p class="card-text">Возраст: {{ .Params.age }}</p>
