--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -40,11 +40,11 @@
 </div>
 
 <div class="px-4 py-5 my-5 text-center">
-    <p class="lead">Школа мозаики Талисман— обучаем всех желающих ремеслу мозаики в Рязани.</p>
+    <p class="lead">Школа мозаики Талисман — обучаем всех желающих ремеслу мозаики в Рязани.</p>
     <p class="lead">Сделайте фоторамку с мозаикой, мозаичное тарелку для фруктов, зеркало с инкрустацией мозаикой, необычный горшок для цветов или мозаичный столик своими руками c нуля.</p>
 
     <blockquote class="blockquote">
-        <p>"Мозаика — моё хобби, которое вдохновляет, даёт силы и новые эмоции. Приходите попробовать на мастер-классы.﻿"</p>
+        <p>"Мозаика — моё хобби, которое вдохновляет, даёт силы и новые эмоции. Приходите попробовать на мастер-классы."</p>
     </blockquote>
 </div>
 
