--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -12,11 +12,10 @@
                 <li class="dropdown"><a href="#"><span>Обучение</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
                         <li><a href="/site/workshops">Мастер-классы</a></li>
-                        <li><a href="/site/#">Абонементы</a></li>
+                        <li><a href="/site/courses">Курсы</a></li>
                     </ul>
                 </li>
-                {{ partial "navbar-item" (dict "text" "Праздники" "href" "/site/events") }}
-                {{ partial "navbar-item" (dict "text" "Магазин" "href" "/site/shop") }}
+                {{ partial "navbar-item" (dict "text" "Мероприятия" "href" "/site/events") }}
                 {{ partial "navbar-item" (dict "text" "Галерея" "href" "/site/gallery") }}
                 {{ partial "navbar-item" (dict "text" "Контакты" "href" "/site/contacts") }}
             </ul>
