--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -8,22 +8,21 @@
         <div class="carousel-inner" role="listbox">
 
             <!-- Slide 1 -->
-            <div class="carousel-item active" style="background-image: url({{ (resources.Get "img/slide/slide-1.jpg").Permalink }})">
+            <div class="carousel-item active" style="background-image: url({{ (resources.Get "img/slide/11.jpg").Permalink }})">
                 <div class="carousel-container">
                     <div class="container">
-                        <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Sailor</span></h2>
-                        <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid.
+                        <h2 class="animate__animated animate__fadeInDown">Студия мозаики <span>Арт-Нуво</span></h2>
+                        {{/*  <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid.
                             Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
                             Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et
-                            tempore modi architecto.</p>
-                        <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
-                            More</a>
+                            tempore modi architecto.</p>  */}}
+                        {{/*  <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">О нас</a>  */}}
                     </div>
                 </div>
             </div>
 
             <!-- Slide 2 -->
-            <div class="carousel-item" style="background-image: url({{ (resources.Get "img/slide/slide-2.jpg").Permalink }})">
+            {{/*  <div class="carousel-item" style="background-image: url({{ (resources.Get "img/slide/slide-2.jpg").Permalink }})">
                 <div class="carousel-container">
                     <div class="container">
                         <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
@@ -35,10 +34,10 @@
                             More</a>
                     </div>
                 </div>
-            </div>
+            </div>  */}}
 
             <!-- Slide 3 -->
-            <div class="carousel-item" style="background-image: url({{ (resources.Get "img/slide/slide-3.jpg").Permalink }})">
+            {{/*  <div class="carousel-item" style="background-image: url({{ (resources.Get "img/slide/slide-3.jpg").Permalink }})">
                 <div class="carousel-container">
                     <div class="container">
                         <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
@@ -50,16 +49,16 @@
                             More</a>
                     </div>
                 </div>
-            </div>
+            </div>  */}}
         </div>
 
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        {{/*  <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
+        </a>  */}}
 
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+        {{/*  <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
+        </a>  */}}
 
     </div>
 </section>
@@ -72,7 +71,7 @@
 
             <div class="row content">
                 <div class="col-lg-6">
-                    <h2>Eum ipsam laborum deleniti velitena</h2>
+                    <h2>Привет, мозайчист!</h2>
                     <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave
                     </h3>
                 </div>
@@ -111,7 +110,7 @@
                 <div class="col-md-6">
                     <div class="icon-box">
                         <i class="bi bi-briefcase"></i>
-                        <h4><a href="#">Lorem Ipsum</a></h4>
+                        <h4><a href="#">Мастер-классы</a></h4>
                         <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
                             cupiditate non provident</p>
                     </div>
@@ -119,7 +118,7 @@
                 <div class="col-md-6 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="bi bi-card-checklist"></i>
-                        <h4><a href="#">Dolor Sitema</a></h4>
+                        <h4><a href="#">Курсы</a></h4>
                         <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat tarad limino ata</p>
                     </div>
@@ -127,15 +126,14 @@
                 <div class="col-md-6 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="bi bi-bar-chart"></i>
-                        <h4><a href="#">Sed ut perspiciatis</a></h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur</p>
+                        <h4><a href="#">Мероприятия</a></h4>
+                        <p>По графику и на заказ</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="bi bi-binoculars"></i>
-                        <h4><a href="#">Nemo Enim</a></h4>
+                        <h4><a href="#">Галерея</a></h4>
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                             anim id est laborum</p>
                     </div>
@@ -143,7 +141,7 @@
                 <div class="col-md-6 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="bi bi-brightness-high"></i>
-                        <h4><a href="#">Magni Dolore</a></h4>
+                        <h4><a href="#">Магазин</a></h4>
                         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
                             voluptatum deleniti atque</p>
                     </div>
@@ -151,7 +149,7 @@
                 <div class="col-md-6 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="bi bi-calendar4-week"></i>
-                        <h4><a href="#">Eiusmod Tempor</a></h4>
+                        <h4><a href="#">Расписание</a></h4>
                         <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta
                             nobis est eligendi</p>
                     </div>
@@ -162,7 +160,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    {{/*  <section id="portfolio" class="portfolio">
         <div class="container">
 
             <div class="row">
@@ -334,7 +332,7 @@
             </div>
 
         </div>
-    </section>
+    </section>  */}}
 
 </main>
 
