--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -8,16 +8,11 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                {{ partial "navbar-item" (dict "text" "О нас" "href" "/site/about" "class" "active") }}
-                <li class="dropdown"><a href="#"><span>Обучение</span> <i class="bi bi-chevron-down"></i></a>
-                    <ul>
-                        <li><a href="/site/workshops">Мастер-классы</a></li>
-                        <li><a href="/site/courses">Курсы</a></li>
-                    </ul>
+                {{- range site.Menus.main }}
+                <li>
+                    <a class="" href="{{ .URL }}" aria-current="page">{{ .Name }}</a>
                 </li>
-                {{ partial "navbar-item" (dict "text" "Мероприятия" "href" "/site/events") }}
-                {{ partial "navbar-item" (dict "text" "Галерея" "href" "/site/gallery") }}
-                {{ partial "navbar-item" (dict "text" "Контакты" "href" "/site/contacts") }}
+                {{- end }}
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
