--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,17 +1,3 @@
-{{/*  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-    </ul>
-    <ul class="justify-content-center list-unstyled d-flex">
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-    </ul>
-</footer>  */}}
-
 <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -19,33 +5,19 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Арт-Нуво</h3>
+              <h3>{{ .Site.Title }}</h3>
               <p>
-                Санкт-Петербург<br>
-                Московский проспект, 120<br><br>
-                +7 (911) 082-56-00<br>  
-                <a href="mailto:artnouveau.mosaic@gmail.com">artnouveau.mosaic@gmail.com</a><br>
+                {{ .Site.Params.Address1 }}<br>
+                {{ .Site.Params.Address2 }}<br><br>
+                {{ .Site.Params.Phone }}<br>  
+                <a href="mailto:{{ .Site.Params.Email }}">{{ .Site.Params.Email }}</a><br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="{{ .Site.Params.Vk }}" class="vk"><i class="bx bxl-vk"></i></a>
+                <a href="{{ .Site.Params.Instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>
               </div>
             </div>
           </div>
-
-          {{/*  <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>  */}}
 
           {{/*  <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
