--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -2,7 +2,6 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>{{ .Site.Title }}</h3>
@@ -10,26 +9,14 @@
                 {{ .Site.Params.Address1 }}<br>
                 {{ .Site.Params.Address2 }}<br><br>
                 {{ .Site.Params.Phone }}<br>  
-                <a href="mailto:{{ .Site.Params.Email }}">{{ .Site.Params.Email }}</a><br>
               </p>
               <div class="social-links mt-3">
                 <a href="{{ .Site.Params.Vk }}" class="vk"><i class="bx bxl-vk"></i></a>
                 <a href="{{ .Site.Params.Instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="mailto:{{ .Site.Params.Email }}" class="email"><i class='bx bx-envelope'></i></a>
               </div>
             </div>
           </div>
-
-          {{/*  <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>  */}}
-
         </div>
       </div>
     </div>
