Archetypes and layouts for workshops/courses

--- a/src/layouts/workshops/list.html
+++ b/src/layouts/workshops/list.html
@@ -1,28 +1,31 @@
 {{ define "main" }}
-    {{ .Content }}
-    <br />
-
-    <div class="album py-5 bg-light">
+<main id="main">
+    <section id="testimonials" class="testimonials">
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {{ range .Pages }}
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                        </svg> -->
-                        <img src="{{ .Permalink }}/images/1.jpg" class="card-img-top"/>
-                        <div class="card-body">
-                            <h5>{{ .Title }}</h5>
-                            <p class="card-text">Возраст: {{ .Params.age }}</p>
-                            <p class="card-text">Продолжительность: {{ .Params.duration }}</p>
-                            <a class="btn btn-primary btn-sm" href="{{ .Permalink }}">Подробнее</a>
-                        </div>
+
+            <div class="row">
+
+            {{ range sort .Pages "Params.weight" }}
+            
+            <div class="col-lg-6">
+                <div class="testimonial-item mt-4">
+                    <img src="{{ .Permalink }}/images/1.jpg" class="testimonial-img" alt="">
+                    <h3>
+                        <a href="{{ .Permalink }}">{{ .Title }}</a>
+                    </h3>
+                    <p>
+                        Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    </p>
+                    <div class="read-more">
+                        <a href="{{ .Permalink }}">Подробнее</a>
                     </div>
-                </div>                
-                {{ end }}
+                </div>
             </div>
+
+            {{end}}
+            </div>
+
         </div>
-    </div>
+    </section>
+</main>
 {{ end }}
