Highlight current page in navbar

--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -1,16 +1,18 @@
 <header id="header" class="fixed-top d-flex align-items-center">
-
     <div class="container d-flex align-items-center">
 
         <h1 class="logo me-auto"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
+        {{ $currentPage := .Page }}
         <nav id="navbar" class="navbar">
             <ul>
                 {{- range site.Menus.main }}
                 <li>
-                    <a class="" href="{{ .URL }}" aria-current="page">{{ .Name }}</a>
+                    {{ $menuEntryPage := .Page }}
+                    {{ $isMenuActive := eq $menuEntryPage $currentPage }}
+                    <a class="{{ if $isMenuActive }}active{{ end }}" href="{{ .URL }}" aria-current="page">{{ .Name }}</a>
                 </li>
                 {{- end }}
             </ul>
@@ -18,9 +20,4 @@
         </nav>
 
     </div>
-
 </header>
-
-{{ define "partials/navbar-item.html" }}
-<li><a class="{{ .class }}" href="{{ .href }}" aria-current="page">{{ .text }}</a></li>
-{{ end }}
