--- a/src/layouts/workshops/single.html
+++ b/src/layouts/workshops/single.html
@@ -1,5 +1,20 @@
 {{ define "main" }}
 <main id="main">
+    <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+
+            <div class="d-flex justify-content-between align-items-center">
+            <h2>Мастер-класс</h2>
+            <ol>
+                <li><a href="{{ .Parent.Parent.Permalink }}">{{ .Parent.Parent.Title }}</a></li>
+                <li><a href="{{ .Parent.Permalink }}">{{ .Parent.Title }}</a></li>
+                <li>{{ .Title }}</li>
+            </ol>
+            </div>
+
+        </div>
+    </section>
+
     <section id="blog" class="blog">
         <div class="container" data-aos="fade-up">
 
