Breadcrumbs on every page

--- a/src/layouts/courses/list.html
+++ b/src/layouts/courses/list.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <main id="main">
+
+    {{ partial "breadcrumbs" . }}
+
     <section id="testimonials" class="testimonials">
         <div class="container">
             <div class="row">
@@ -8,7 +11,7 @@
                     <div class="testimonial-item mt-4">
                         <img src="{{ .Permalink }}/images/1.jpg" class="testimonial-img" alt="">
                         <h3>
-                            <a href="{{ .Permalink }}">{{ .Params.shortTitle }}</a>
+                            <a href="{{ .Permalink }}">{{ .Title }}</a>
                         </h3>
                         <p>
                             {{ with .Resources.GetMatch "description.md" }}
