--- a/src/layouts/gallery/list.html
+++ b/src/layouts/gallery/list.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <main id="main">
+
+    {{ partial "breadcrumbs" . }}
+    
     <section id="gallery" class="gallery">
         <div class="container">
             <div class="row">
