--- a/src/layouts/workshops/list.html
+++ b/src/layouts/workshops/list.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <main id="main">
+
+    {{ partial "breadcrumbs" . }}
+
     <section id="testimonials" class="testimonials">
         <div class="container">
 
