--- a/src/layouts/workshops/list.html
+++ b/src/layouts/workshops/list.html
@@ -1,34 +1,6 @@
 {{ define "main" }}
 <main id="main">
-
     {{ partial "breadcrumbs" . }}
-
-    <section id="testimonials" class="testimonials">
-        <div class="container">
-
-            <div class="row">
-
-            {{ range sort .Pages "Params.weight" }}
-            
-            <div class="col-lg-6">
-                <div class="testimonial-item mt-4">
-                    <img src="{{ .Permalink }}/images/1.jpg" class="testimonial-img" alt="">
-                    <h3>
-                        <a href="{{ .Permalink }}">{{ .Title }}</a>
-                    </h3>
-                    <p>
-                        Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                    </p>
-                    <div class="read-more">
-                        <a href="{{ .Permalink }}">Подробнее</a>
-                    </div>
-                </div>
-            </div>
-
-            {{end}}
-            </div>
-
-        </div>
-    </section>
+    {{ partial "events" . }}
 </main>
 {{ end }}
