Telegram icon in footer

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -13,6 +13,7 @@
                         <div class="social-links mt-3">
                             <a href="{{ .Site.Params.Vk }}" class="vk"><i class="bx bxl-vk"></i></a>
                             <a href="{{ .Site.Params.Instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="{{ .Site.Params.Telegram }}" class="telegram"><i class="bx bxl-telegram"></i></a>
                             <a href="mailto:{{ .Site.Params.Email }}" class="email"><i class='bx bx-envelope'></i></a>
                         </div>
                     </div>
