--- a/src/assets/css/event.css
+++ b/src/assets/css/event.css
@@ -1,45 +1,45 @@
 /*--------------------------------------------------------------
-# Blog
+# Event
 --------------------------------------------------------------*/
 
-.blog {
+.event {
     padding: 40px 0 20px 0;
   }
   
-  .blog .entry {
+  .event .entry {
     padding: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   }
   
-  .blog .entry .entry-img {
+  .event .entry .entry-img {
     max-height: 440px;
     margin: -30px -30px 20px -30px;
     overflow: hidden;
   }
   
-  .blog .entry .entry-title {
+  .event .entry .event-title {
     font-size: 28px;
     font-weight: bold;
     padding: 0;
     margin: 0 0 20px 0;
   }
   
-  .blog .entry .entry-title a {
+  .event .entry .event-title a {
     color: #556270;
     transition: 0.3s;
   }
   
-  .blog .entry .entry-title a:hover {
+  .event .entry .event-title a:hover {
     color: #d9232d;
   }
   
-  .blog .entry .entry-meta {
+  .event .entry .event-meta {
     margin-bottom: 15px;
     color: #c1c8d0;
   }
   
-  .blog .entry .entry-meta ul {
+  .event .entry .event-meta ul {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -48,33 +48,33 @@
     margin: 0;
   }
   
-  .blog .entry .entry-meta ul li+li {
+  .event .entry .event-meta ul li+li {
     padding-left: 20px;
   }
   
-  .blog .entry .entry-meta i {
+  .event .entry .event-meta i {
     font-size: 16px;
     margin-right: 8px;
     line-height: 0;
   }
   
-  .blog .entry .entry-meta a {
+  .event .entry .event-meta a {
     color: #777777;
     font-size: 14px;
     display: inline-block;
     line-height: 1;
   }
   
-  .blog .entry .entry-content p {
+  .event .entry .event-content p {
     line-height: 24px;
   }
   
-  .blog .entry .entry-content .read-more {
+  .event .entry .event-content .read-more {
     -moz-text-align-last: right;
     text-align-last: right;
   }
   
-  .blog .entry .entry-content .read-more a {
+  .event .entry .event-content .read-more a {
     display: inline-block;
     background: #d9232d;
     color: #fff;
@@ -84,17 +84,17 @@
     border-radius: 4px;
   }
   
-  .blog .entry .entry-content .read-more a:hover {
+  .event .entry .event-content .read-more a:hover {
     background: #df3740;
   }
   
-  .blog .entry .entry-content h3 {
+  .event .entry .event-content h3 {
     font-size: 22px;
     margin-top: 30px;
     font-weight: bold;
   }
   
-  .blog .entry .entry-content blockquote {
+  .event .entry .event-content blockquote {
     overflow: hidden;
     background-color: #fafafa;
     padding: 60px;
@@ -103,7 +103,7 @@
     margin: 20px 0;
   }
   
-  .blog .entry .entry-content blockquote p {
+  .event .entry .event-content blockquote p {
     color: #444444;
     line-height: 1.6;
     margin-bottom: 0;
@@ -112,7 +112,7 @@
     font-size: 22px;
   }
   
-  .blog .entry .entry-content blockquote::after {
+  .event .entry .event-content blockquote::after {
     content: "";
     position: absolute;
     left: 0;
@@ -124,61 +124,57 @@
     margin-bottom: 20px;
   }
   
-  .blog .entry .entry-footer {
+  .event .entry .entry-footer {
     padding-top: 10px;
     border-top: 1px solid #e6e6e6;
   }
   
-  .blog .entry .entry-footer i {
+  .event .entry .entry-footer i {
     color: #a4afba;
     display: inline;
   }
   
-  .blog .entry .entry-footer a {
+  .event .entry .entry-footer a {
     color: #606f7e;
     transition: 0.3s;
   }
   
-  .blog .entry .entry-footer a:hover {
+  .event .entry .entry-footer a:hover {
     color: #d9232d;
   }
   
-  .blog .entry .entry-footer .cats {
+  .event .entry .entry-footer .cats {
     list-style: none;
     display: inline;
     padding: 0 20px 0 0;
     font-size: 14px;
   }
   
-  .blog .entry .entry-footer .cats li {
+  .event .entry .entry-footer .cats li {
     display: inline-block;
   }
   
-  .blog .entry .entry-footer .tags {
+  .event .entry .entry-footer .tags {
     list-style: none;
     display: inline;
     padding: 0;
     font-size: 14px;
   }
   
-  .blog .entry .entry-footer .tags li {
+  .event .entry .entry-footer .tags li {
     display: inline-block;
   }
   
-  .blog .entry .entry-footer .tags li+li::before {
+  .event .entry .entry-footer .tags li+li::before {
     padding-right: 6px;
     color: #6c757d;
     content: ",";
   }
   
-  .blog .entry .entry-footer .share {
+  .event .entry .entry-footer .share {
     font-size: 16px;
   }
   
-  .blog .entry .entry-footer .share i {
+  .event .entry .entry-footer .share i {
     padding-left: 5px;
-  }
-  
-  .blog .entry-single {
-    margin-bottom: 30px;
   }
