--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -23,12 +23,12 @@
 </head>
 
 <body>
-    {{ partial "header" . }}
+    {{- partial "header" . -}}
 
-    {{ block "main" . }}
-    {{ end }}
+    {{- block "main" . -}}
+    {{- end -}}
 
-    {{ partial "footer" . }}
+    {{- partial "footer" . -}}
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
